Update4 index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <head></head>
   <body>
-    this is the html code
-    this is second line 
+   web page under construction
   
   </body>
 </html>
