--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-   web page under construction
-  
+     web page under construction
+  <p> coming soon !!!!</p>
   </body>
 </html>
